# transcrire_v2

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  build_windows.bat  main.py  pyproject.toml  verify_phase3_dod.sh
app/: config.py  lifecycle.py  logging.py  orchestrator.py
core/: captions.py  checkpoint.py  idempotency.py  images.py  pipeline.py  state_machine.py  transcript.py
domain/: dto.py  enums.py  models.py
events/: emitter.py
interface/cli/: commands.py  main.py
interface/gui/: main.py  tasks.py  websocket.py
interface/gui/pages/: dashboard.py  episode.py  help.py  settings.py
notifications/: toast.py
services/: audio.py  gemini.py  groq.py  rss.py  whisper.py
storage/: db.py  files.py  manifest.py  schema.sql  write_aggregator.py
storage/repositories/: assets_repo.py  episodes_repo.py  events_repo.py  jobs_repo.py
tests/test_core/: test_captions.py  test_checkpoint.py  test_idempotency.py  test_images.py  test_pipeline.py  test_state_machine.py  test_transcript.py
tests/test_e2e/: conftest.py  test_pipeline_e2e.py
tests/test_integrations/: conftest.py  test_audio.py  test_gemini.py  test_groq.py  test_rss.py  test_whisper.py
tests/test_interface/: conftest.py  test_cli.py  test_gui_smoke.py
utils/: hashing.py  retry.py  time.py
workers/: base_worker.py  caption_worker.py  fetch_worker.py  image_worker.py  transcribe_worker.py
